--- a/angular-app/src/app/components/pages/product-photos/product-photos-list/product-photos-list.component.html
+++ b/angular-app/src/app/components/pages/product-photos/product-photos-list/product-photos-list.component.html
@@ -4,6 +4,8 @@
     <product-photos-upload (onSuccess)="onInsertSuccess($event)"></product-photos-upload>
   </div>
   <div class="col-md-12">
-    <img [src]="photo.photo_url" *ngFor="let photo of photos" style="max-width: 100px">
+    <a data-fancybox="gallery" [href]="photo.photo_url" *ngFor="let photo of photos">
+        <img [src]="photo.photo_url" style="max-width: 100px">
+    </a>
   </div>
 </div>
