Exclusão de foto de produtos

--- a/angular-app/src/app/components/pages/product-photos/product-photos-list/product-photos-list.component.html
+++ b/angular-app/src/app/components/pages/product-photos/product-photos-list/product-photos-list.component.html
@@ -9,4 +9,12 @@
     </a>
   </div>
 </div>
-<product-photos-edit-modal (onSuccess)="onEditSuccess($event)" [photoId]="photoIdToEdit"></product-photos-edit-modal>
+<product-photos-edit-modal 
+    (onSuccess)="onEditSuccess($event)" 
+    [photoId]="photoIdToEdit">
+</product-photos-edit-modal>
+<product-photos-delete-modal 
+    (onSuccess)="onDeleteSuccess($event)"
+    (onError)="onDeleteError($event)" 
+    [photoId]="photoIdToDelete">
+</product-photos-delete-modal>
