--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -50,16 +50,18 @@
 }
 
 .link-button {
-  background-color: transparent;
-  border: none;
-  cursor: pointer;
-  text-decoration: underline;
-  display: inline;
-  margin: 0;
-  padding: 0;
+    background-color: transparent;
+    color: #007bff;
+    font-weight: bold;
+    border: none;
+    cursor: pointer;
+    text-decoration: none;
+    display: inline;
+    margin: 0;
+    padding: 0;
 }
 
 .link-button:hover,
 .link-button:focus {
-text-decoration: none;
+    text-decoration: underline;
 }
